# ROS-and-Computer-Vision-

./: README.md
computer_vision/: .gitignore  EXECUTION_SUMMARY.md  FIX_PUSH.md  GITHUB_COMMIT_GUIDE.md  GITHUB_UPLOAD_GUIDE.md  HOW_TO_RUN.md  PUSH_TO_GITHUB.md  QUICKSTART.md  QUICK_COMMIT.md  QUICK_GITHUB_UPLOAD.md  README.md  REPOSITORY_FIX.md  SAMPLE_OUTPUTS_README.md  TESTING_GUIDE.md  requirements.txt  run_task.py  test_all_tasks.sh
computer_vision/scripts/: generate_sample_data.py  github_commit.sh  prepare_github_upload.py
computer_vision/task1_object_detection/: README.md  REPORT.md  __init__.py  evaluate.py  inference.py  train.py
computer_vision/task1_object_detection/configs/: default.yaml
computer_vision/task3_vlm_design/: README.md  VLM_Design_Document.md
ros2_communication/: CMakeLists.txt  README.md  package.xml  script_a.cpp  script_b.cpp  script_c.py
ros2_communication/bag/: cmd_vel.db3
ros2_communication/install/: local_setup.sh  setup.sh
ros2_communication/install/wheel_rpm_pipeline/lib/wheel_rpm_pipeline/: script_a  test_cmd_vel_publisher
ros2_communication/install/wheel_rpm_pipeline/share/ament_index/resource_index/parent_prefix_path/: wheel_rpm_pipeline
ros2_communication/install/wheel_rpm_pipeline/share/wheel_rpm_pipeline/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_communication/install/wheel_rpm_pipeline/share/wheel_rpm_pipeline/cmake/: wheel_rpm_pipelineConfig.cmake
ros2_communication/log/: latest_build
ros2_communication/shared/: shared_defs.hpp
(+6 files in other folders)
